--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <title>Hello Angular</title>
 </head>
-<body>
-  <h1>Hello world</h1>
-
-  <script type="text/javascript" src"https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
+<body ng-app>
+  <h1>{{ "Hello" + " Angular"}}</h1>
+  <div>
+    {{ 2 + 3 }}
+  </div>
+  <div>
+    <input type="text" ng-model="myModel" />
+  </div>
+  <div>
+    {{ myModel }}
+  </div>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
 </body>
 </html>
