--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Hello Angular</title>
 </head>
-<body ng-app>
+<body ng-app="myApp">
   <h1>{{ "Hello" + " Angular"}}</h1>
   <div>
     {{ 2 + 3 }}
@@ -16,5 +16,6 @@
     {{ myModel }}
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
+  <script type="text/javascript src="js/myApp.js"></script>
 </body>
 </html>
