--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,14 @@
   <div>
     {{ myModel }}
   </div>
+
+  <div ng-controller="myController">
+    {{ myFirstName }}
+  </div>
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-  <script type="text/javascript src="js/myApp.js"></script>
+
+  <script type="text/javascript" src="js/myApp.js"></script>
+
 </body>
 </html>
