--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,22 @@
   <div>
     {{ 2 + 3 }}
   </div>
-  <div>
-    <input type="text" ng-model="myModel" />
-  </div>
-  <div>
-    {{ myModel }}
-  </div>
 
   <div ng-controller="myController">
     {{ myFirstName }}
+
+    <div>
+      <input type="text" ng-model="myModel" />
+    </div>
+    <div>
+      {{ myModel }}
+    </div>
+
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-
   <script type="text/javascript" src="js/myApp.js"></script>
+  <script type="text/javascript" src="js/controllers.js"></script>
 
 </body>
 </html>
