--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,17 @@
       {{ myModel }}
     </div>
 
+    <div>
+      <h2>{{ mainCharacter }}</h2>
+    </div>
+
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
   <script type="text/javascript" src="js/myApp.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
+  <script type="text/javascript" src="js/values.js"></script>
+
 
 </body>
 </html>
