Declares constance named APP_VERSION and injects into myApp using rootScope

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body ng-app="myApp">
   <h1>{{ "Hello" + " Angular"}}</h1>
+  <h2>{{ APP_VERSION }}</h2>
   <div>
     {{ 2 + 3 }}
   </div>
@@ -30,6 +31,8 @@
   <script type="text/javascript" src="js/myApp.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="js/values.js"></script>
+  <script type="text/javascript" src="js/constants.js"></script>
+
 
 
 </body>
