--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       <h2>{{ mainCharacter }}</h2>
     </div>
 
+    <div>
+      <h2>{{ characterVersionFactory }}</h2>
+    </div>
+
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
@@ -32,8 +36,7 @@
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="js/values.js"></script>
   <script type="text/javascript" src="js/constants.js"></script>
-
-
+  <script type="text/javascript" src="js/factories.js"></script>
 
 </body>
 </html>
