Adds services module with exposesd method to get all books. WIP to get book by ID

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
       <h2>{{ characterVersionFactory }}</h2>
     </div>
 
+    <div>
+      <h4>{{ books }}</h4>
+    </div>
+
   </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
@@ -37,6 +41,6 @@
   <script type="text/javascript" src="js/values.js"></script>
   <script type="text/javascript" src="js/constants.js"></script>
   <script type="text/javascript" src="js/factories.js"></script>
-
+  <script type="text/javascript" src="js/services.js"></script>
 </body>
 </html>
