--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,12 @@
     </div>
 
     <div>
-      <h4>{{ books }}</h4>
+      <ul class="books">
+        <li ng-repeat="book in books">
+          <h4 class="book_title">{{ book.title }}</h4>
+          <p class"book_author">{{ book.author }}</p>
+        </li>
+      </ul>
     </div>
 
   </div>
