--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,14 @@
     </div>
 
     <div>
+      <h4>Book Service</h4>
+      <div class="search_book_title_container">
+        <label for="search_book_title">Search Book Title:
+        </label>
+        <input type="text" id="search_book_title" ng-model="searchBookFilter">
+      </div>
       <ul class="books">
-        <li ng-repeat="book in BookService.books">
+        <li ng-repeat="book in BookService.books | filter:book.title=searchBookFilter">
           <h4 class="book_title">{{ book.title }}</h4>
           <p class"book_author">{{ book.author }}</p>
         </li>
