--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
 
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-route.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-route.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-animate.min.js"></script>
   <script type="text/javascript" src="js/myApp.js"></script>
   <script type="text/javascript" src="js/controllers/movies-controller.js"></script>
   <script type="text/javascript" src="js/controllers/books-controller.js"></script>
