Creates basic files and routes for tasks kanban assignment

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello Angular</title>
+  <link rel="stylesheet" href="/css/animation.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body ng-app="myApp">
   <ul>
     <li><a ng-href='/#/'>Home</a></li>
-    <li><a ng-href='/#/books'>Books</a></li>
-    <li><a ng-href='/#/movies'>Movies</a></li>
-    <li><a ng-href='/#/other'>Other</a></li>
+    <li><a ng-href='/#/books'>New Task</a></li>
   </ul>
 
   <div ng-view> </div>
-
-
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-route.min.js"></script>
