adds function to move tasks when clicked

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello Angular</title>
+  <title>Yes We CanBan</title>
   <link rel="stylesheet" href="/css/animation.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
