WIP, post on angular frontend not working

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body ng-app="myApp">
-  <ul>
-    <li><a ng-href='/#/'>Home</a></li>
-    <li><a ng-href='/#/tasks'>New Task</a></li>
-  </ul>
+  <div id="navbar">
+    <ul>
+      <li><a ng-href='/#/'>Home</a></li>
+      <li><a ng-href='/#/tasks'>New Task</a></li>
+    </ul>
+  </div>
 
   <div ng-view> </div>
 
