--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Yes We CanBan</title>
-  <link rel="stylesheet" href="/css/animation.css">
+  <!-- <link rel="stylesheet" href="/css/animation.css"> -->
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body ng-app="myApp">
