adds register and login route

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     </ul> -->
     <div class="nav-home"><a ng-href='/#/'>home</a></div>
     <div class="nav-addtask"><a ng-href='/#/tasks'>+</a></div>
-    <div class="nav-login"><a ng-href='/login'>login</a></div>
+    <div class="nav-login"><a ng-href='/#/login'>login</a></div>
+    <div class="nav-login"><a ng-href='/#/register'>register</a></div>
 
   </div>
 
@@ -27,6 +28,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-animate.min.js"></script>
   <script type="text/javascript" src="js/myApp.js"></script>
   <script type="text/javascript" src="js/controllers/tasks-controller.js"></script>
+  <script type="text/javascript" src="js/controllers/user_regis-controller.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
 
 
