Added created by to be populated

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,10 @@
   <title>Yes We CanBan</title>
   <!-- <link rel="stylesheet" href="/css/animation.css"> -->
   <link rel="stylesheet" href="/css/styles.css">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 </head>
 <body ng-app="myApp">
   <div id="navbar" ng-controller="UserController">
-<!--     <ul>
-      <li><a ng-href='/#/'>Home</a></li>
-      <li><a ng-href='/#/tasks'>New Task</a></li>
-    </ul> -->
     <div class="nav-home"><a ng-href='/#/'>home</a></div>
     <div class="nav-addtask"><a ng-href='/#/tasks'>+</a></div>
     <div class="nav-login"><a ng-href='/#/login'>login</a></div>
@@ -30,6 +27,7 @@
   <script type="text/javascript" src="js/controllers/tasks-controller.js"></script>
   <script type="text/javascript" src="js/controllers/userRegister-controller.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 
 </body>
