--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <body ng-app="myApp">
   <div id="navbar" ng-controller="UserController">
     <div class="nav-btn nav-home"><a ng-href='/#/'>home</a></div>
+    <div class="nav-btn nav-login"><a href="#" ng-click='userLogout()' id="logout-btn">logout</a></div>
 
     <div class="nav-btn nav-login">
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,7 +40,7 @@
 
     <div class="nav-btn nav-login">
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      register
+      login
       </button>
       <div class="dropdown-menu regFormContainer">
         <div class="registerDiv">
@@ -76,7 +77,7 @@
               </div>
 
               <div class="commit">
-                <button type="submit">Register</button>
+                <button type="submit">login</button>
               </div>
             </fieldset>
           </form>
@@ -84,10 +85,6 @@
       </div>
     </div>
 
-    <div class="nav-btn nav-login"><a href="#" ng-click='userLogout()' id="logout-btn">logout</a>
-
-
-    </div>
   </div>
 
   <div id="container">
