updates sign-up link

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     <div class="nav-btn nav-login">
       <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      login
+      sign-up
       </button>
       <div class="dropdown-menu regFormContainer">
         <div class="registerDiv">
