--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>YWK</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 </head>
 <body ng-app="myApp">
@@ -90,7 +90,11 @@
   <div id="container">
     <div ng-view id="main"></div>
 
-    <div id="footer"></div>
+    <div id="footer">
+      <p>Created by Rizhia Ortega & Kent Salcedo</p>
+      <p>Student of DevLeague</p>
+      <p>Full Stack Developers</p>
+    </div>
   </div>
 
 
